# yamelinno

./: .gitignore  Containerfile  README.md  coverage.json  pyproject.toml  requirements.txt  yamelinno.py
.github/workflows/: container-publish.yml  pylint.yml  unittest.yml
schemas/: base-schema.yml
src/: rendering.py  renderization.py  templates.py  validation.py
templates/: base-template.yml
tests/: test_rendering.py  test_renderization.py  test_template.py  test_validation.py  test_yamelinno.py
