[project]
name = "yamelinno"
version = "0.1.4"
description = "A tool to generate InnoSetup scripts from YAML files."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage==7.5.4",
    "pyyaml==6.0.1",
    "types-pyyaml==6.0.12.20240311",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
]
